Test/TestPi/Scripts/Strings.pi
// test strings

"hello, " "world" + "hello, world" == assert
// is this a good idea? "spam" 3 * "spamspamspam" == assert
// error: 3 "spam" * 

